Move cards from shop to cards button, beautiful crypto-themed design with descriptions

--- a/web_app.html
+++ b/web_app.html
@@ -1383,10 +1383,9 @@
                         <button onclick="this.closest('.modal').remove()" style="background:rgba(255,255,255,0.1);border:1px solid rgba(255,255,255,0.3);border-radius:8px;width:32px;height:32px;color:#fff;cursor:pointer;font-size:18px;">✕</button>
                     </div>
                     <div style="display:grid;grid-template-columns:repeat(2,1fr);gap:10px;margin-bottom:20px;">
-                        <button class="shop-cat-btn" onclick="loadShopCategory('boosts')" style="padding:10px;background:linear-gradient(135deg,#667eea,#764ba2);color:#fff;border:none;border-radius:10px;cursor:pointer;font-weight:600;font-size:12px;">📈 Бусты (20)</button>
-                        <button class="shop-cat-btn" onclick="loadShopCategory('energy')" style="padding:10px;background:rgba(255,255,255,0.1);color:#fff;border:1px solid rgba(255,255,255,0.3);border-radius:10px;cursor:pointer;font-weight:600;font-size:12px;">⚡ Энергия (20)</button>
-                        <button class="shop-cat-btn" onclick="loadShopCategory('cards')" style="padding:10px;background:rgba(255,255,255,0.1);color:#fff;border:1px solid rgba(255,255,255,0.3);border-radius:10px;cursor:pointer;font-weight:600;font-size:12px;">🎴 Карточки (20)</button>
-                        <button class="shop-cat-btn" onclick="loadShopCategory('auto')" style="padding:10px;background:rgba(255,255,255,0.1);color:#fff;border:1px solid rgba(255,255,255,0.3);border-radius:10px;cursor:pointer;font-weight:600;font-size:12px;">🤖 Авто (20)</button>
+                        <button class="shop-cat-btn" onclick="loadShopCategory('boosts')" style="padding:10px;background:linear-gradient(135deg,#667eea,#764ba2);color:#fff;border:none;border-radius:10px;cursor:pointer;font-weight:600;font-size:12px;">📈 Бусты</button>
+                        <button class="shop-cat-btn" onclick="loadShopCategory('energy')" style="padding:10px;background:rgba(255,255,255,0.1);color:#fff;border:1px solid rgba(255,255,255,0.3);border-radius:10px;cursor:pointer;font-weight:600;font-size:12px;">⚡ Энергия</button>
+                        <button class="shop-cat-btn" onclick="loadShopCategory('auto')" style="padding:10px;background:rgba(255,255,255,0.1);color:#fff;border:1px solid rgba(255,255,255,0.3);border-radius:10px;cursor:pointer;font-weight:600;font-size:12px;">🤖 Авто</button>
                     </div>
                     <div id="shopItemsList" style="display:grid;gap:8px;"></div>
                     <button onclick="this.closest('.modal').remove()" style="width:100%;padding:12px;background:rgba(255,255,255,0.1);color:#fff;border:1px solid rgba(255,255,255,0.3);border-radius:12px;cursor:pointer;font-weight:600;margin-top:20px;">Закрыть</button>
