Add 40 crypto-themed cards (20 per_min, 20 per_hour) with levels and progressive prices

--- a/web_app.html
+++ b/web_app.html
@@ -1738,9 +1738,7 @@
                 const cards = shopData.items.filter(item => item.type === 'card');
                 if(cards && cards.length > 0) {
                     shopList.innerHTML = cards.map(card => {
-                        const rarity = card.name.toLowerCase().includes('legendary') ? 'legendary' : 
-                                      card.name.toLowerCase().includes('epic') ? 'epic' :
-                                      card.name.toLowerCase().includes('rare') ? 'rare' : 'common';
+                        const rarity = card.rarity || 'common';
                         const rarityInfo = {
                             'common': {emoji:'⚪', name:'Обычная', color:'rgba(255,255,255,0.15)', border:'rgba(255,255,255,0.4)'},
                             'rare': {emoji:'🔵', name:'Редкая', color:'rgba(102,126,234,0.25)', border:'rgba(102,126,234,0.8)'},
@@ -1748,14 +1746,21 @@
                             'legendary': {emoji:'🟡', name:'Легендарная', color:'rgba(234,179,8,0.25)', border:'rgba(234,179,8,0.8)'}
                         };
                         const info = rarityInfo[rarity];
-                        const income = card.income || 0;
+                        const income = card.income_per_min || 0;
+                        const incomeType = card.income_type === 'per_minute' ? '/мин' : '/час';
+                        const level = card.level || 1;
+                        const nameParts = card.name || 'Карточка';
+                        const cardEmoji = nameParts.match(/[\u{1F600}-\u{1F9FF}]/u)?.[0] || '💳';
+                        const cardName = nameParts.replace(/[\u{1F600}-\u{1F9FF}]/u, '').trim();
                         return `
                             <div style="background:${info.color};padding:12px;border-radius:12px;border:2px solid ${info.border};">
-                                <div style="font-size:22px;text-align:center;margin-bottom:8px;">${info.emoji}</div>
-                                <div style="font-size:12px;font-weight:700;color:#fff;text-align:center;margin-bottom:8px;">${info.name}</div>
-                                <div style="font-size:10px;color:#94a3b8;text-align:center;margin-bottom:10px;">+${income} 🪙/мин</div>
-                                <button onclick="buyShopItem(${card.id},'${card.currency}',${card.price || card.coin_price || card.hash_price || 0});this.closest('.modal').remove();" style="width:100%;padding:8px;background:linear-gradient(135deg,${card.currency==='hash'?'#667eea':'#10b981'},${card.currency==='hash'?'#764ba2':'#059669'});color:#fff;border:none;border-radius:8px;cursor:pointer;font-weight:700;font-size:11px;">
-                                    ${card.currency==='hash'?'💎':'🪙'} ${(card.price || card.coin_price || card.hash_price || 0).toLocaleString()}
+                                <div style="font-size:24px;text-align:center;margin-bottom:6px;">${cardEmoji}</div>
+                                <div style="font-size:10px;font-weight:700;color:#fff;text-align:center;margin-bottom:6px;">${cardName}</div>
+                                <div style="font-size:11px;color:#94a3b8;text-align:center;margin-bottom:6px;">${card.description}</div>
+                                <div style="font-size:12px;color:#10b981;text-align:center;margin-bottom:6px;font-weight:700;">+${income.toFixed(1)} 🪙${incomeType}</div>
+                                <div style="font-size:9px;color:#fbbf24;text-align:center;margin-bottom:8px;font-weight:600;">Lv.${level} ${info.name}</div>
+                                <button onclick="buyShopItem('${card.id}','coins',${card.price || 0});" style="width:100%;padding:8px;background:linear-gradient(135deg,#667eea,#764ba2);color:#fff;border:none;border-radius:8px;cursor:pointer;font-weight:700;font-size:11px;">
+                                    🪙 ${(card.price || 0).toLocaleString()}
                                 </button>
                             </div>
                         `;
