Fix buyShopItem call signature and update passive income after purchase

--- a/web_app.html
+++ b/web_app.html
@@ -1457,6 +1457,23 @@
                     loadShopCategory(document.querySelector('.shop-cat-btn[style*="linear-gradient"]').textContent.toLowerCase().includes('boosts') ? 'boosts' : 
                                        document.querySelector('.shop-cat-btn[style*="linear-gradient"]').textContent.toLowerCase().includes('energy') ? 'energy' :
                                        document.querySelector('.shop-cat-btn[style*="linear-gradient"]').textContent.toLowerCase().includes('карточки') ? 'cards' : 'auto');
+                    
+                    // Reload user cards to update passive income display
+                    if(document.getElementById('userCardsList')) {
+                        fetch('/api/cards', {
+                            method: 'POST',
+                            headers: {'Content-Type': 'application/json'},
+                            body: JSON.stringify({user_id: user?.id})
+                        })
+                        .then(res => res.json())
+                        .then(data => {
+                            const totalPassive = (data.total_passive_per_hour || 0);
+                            const passiveInfo = document.getElementById('passiveInfo');
+                            if(passiveInfo && passiveInfo.querySelector('div:last-child')) {
+                                passiveInfo.querySelector('div:last-child').textContent = `+${totalPassive.toLocaleString()} 🪙/час`;
+                            }
+                        });
+                    }
                 } else {
                     anim.innerHTML='<div style="background:rgba(239,68,68,0.98);padding:25px 50px;border-radius:20px;font-size:36px;">❌ ' + data.error + '</div>';
                     setTimeout(()=>{anim.remove();},1500);
@@ -1777,7 +1794,7 @@
                                 <div style="font-size:11px;color:#94a3b8;text-align:center;margin-bottom:6px;">${card.description}</div>
                                 <div style="font-size:12px;color:#10b981;text-align:center;margin-bottom:6px;font-weight:700;">+${income.toFixed(1)} 🪙${incomeType}</div>
                                 <div style="font-size:9px;color:#fbbf24;text-align:center;margin-bottom:8px;font-weight:600;">Lv.${level} ${info.name}</div>
-                                <button onclick="buyShopItem('${card.id}','coins',${card.price || 0});" style="width:100%;padding:8px;background:linear-gradient(135deg,#667eea,#764ba2);color:#fff;border:none;border-radius:8px;cursor:pointer;font-weight:700;font-size:11px;">
+                                <button onclick="buyShopItem('${card.id}', ${card.price || 0})" style="width:100%;padding:8px;background:linear-gradient(135deg,#667eea,#764ba2);color:#fff;border:none;border-radius:8px;cursor:pointer;font-weight:700;font-size:11px;">
                                     🪙 ${(card.price || 0).toLocaleString()}
                                 </button>
                             </div>
