Fix offline spelling and increase card max level to 300

--- a/web_app.html
+++ b/web_app.html
@@ -1752,7 +1752,7 @@
                     
                     <div style="background:linear-gradient(135deg,rgba(102,126,234,0.15),rgba(118,75,162,0.15));padding:15px;border-radius:15px;margin-bottom:20px;border:2px solid rgba(102,126,234,0.3);">
                         <div style="font-size:13px;color:#94a3b8;line-height:1.6;">
-                            <strong style="color:#fff;">📋 Пассивный доход 24/7:</strong> Крипто-карточки генерируют коины каждую минуту! Разные редкости = разный доход. Зарабатывайте даже офлайн!
+                            <strong style="color:#fff;">📋 Пассивный доход 24/7:</strong> Крипто-карточки генерируют коины каждую минуту! Разные редкости = разный доход. Зарабатывайте даже оффлайн!
                         </div>
                     </div>
                     
