Add Buy Currency button and modal with Telegram Stars payment

--- a/web_app.html
+++ b/web_app.html
@@ -1064,9 +1064,13 @@
                 <div class="btn-emoji">💸</div>
                 <div>Вывод</div>
             </a>
-            <a href="#" class="btn" onclick="openDailyBonus(event)" style="grid-column: span 2;">
+            <a href="#" class="btn" onclick="openDailyBonus(event)">
                 <div class="btn-emoji">🎁</div>
                 <div>Ежедневные задания</div>
+            </a>
+            <a href="#" class="btn" onclick="openBuyCurrency(event)">
+                <div class="btn-emoji">⭐</div>
+                <div>Купить валюту</div>
             </a>
         </div>
     </div>
