--- a/web_app.html
+++ b/web_app.html
@@ -2470,7 +2470,7 @@
                                 <div style="font-size:24px;">💎</div>
                             </div>
                             <button onclick="buyWithStars(1, 1000000, 'coins')" style="width:100%;padding:12px;background:linear-gradient(135deg,#667eea,#764ba2);color:#fff;border:none;border-radius:10px;cursor:pointer;font-weight:700;font-size:14px;margin-top:10px;">
-                                💰 Купить за 10 ⭐
+                                💰 Купить за 100 коинов
                             </button>
                         </div>
                         <div style="background:linear-gradient(135deg,rgba(234,179,8,0.2),rgba(251,191,36,0.2));padding:20px;border-radius:15px;border:2px solid rgba(234,179,8,0.5);">
@@ -2482,7 +2482,7 @@
                                 <div style="font-size:24px;">💎</div>
                             </div>
                             <button onclick="buyWithStars(2, 5000000, 'coins')" style="width:100%;padding:12px;background:linear-gradient(135deg,#667eea,#764ba2);color:#fff;border:none;border-radius:10px;cursor:pointer;font-weight:700;font-size:14px;margin-top:10px;">
-                                💰 Купить за 40 ⭐
+                                💰 Купить за 500 коинов
                             </button>
                         </div>
                     </div>
@@ -2502,20 +2502,21 @@
                 const starsCount = productId === 1 ? 10 : 40;
                 
                 // Show confirmation popup
+                const price = productId === 1 ? 100 : 500;
                 tg.showPopup({
-                    title: '⭐ Покупка через Stars',
-                    message: `Купить ${amount.toLocaleString()} ${currency === 'coins' ? 'коинов' : 'QuanHash'} за ${starsCount} ⭐?`,
+                    title: '💎 Покупка валюты',
+                    message: `Купить ${amount.toLocaleString()} коинов за ${price} коинов из баланса?`,
                     buttons: [
                         {id: 'cancel', type: 'cancel'},
                         {id: 'purchase', type: 'default', text: '💎 Купить'}
                     ]
                 }, async (buttonId) => {
                     if(buttonId === 'purchase') {
-                        // Close modal and redirect to bot for invoice
+                        // Close modal and redirect to bot for processing
                         document.querySelector('#buyCurrencyModal')?.remove();
                         
-                        // Open bot with product info (replace with your actual bot username)
-                        const tgLink = `https://t.me/QuantumNexusGameBot?start=buy_stars_${productId}`;
+                        // Open bot with product info
+                        const tgLink = `https://t.me/qanexus_bot?start=buy_stars_${productId}`;
                         tg.openTelegramLink(tgLink);
                     }
                 });
