--- a/web_app.html
+++ b/web_app.html
@@ -2515,13 +2515,21 @@
                         // Close modal first
                         document.querySelector('#buyCurrencyModal')?.remove();
                         
-                        // Close web app and open bot
-                        tg.close();
+                        // Show message that bot will open
+                        tg.showAlert('Открываем бота для оплаты...');
                         
-                        // Give Telegram a moment to close, then open bot
-                        setTimeout(() => {
-                            window.location.href = `https://t.me/qanexus_bot?start=buy_stars_${productId}`;
-                        }, 300);
+                        // Use Telegram's openTelegramLink with proper method
+                        if(tg.openTelegramLink) {
+                            tg.openTelegramLink(`https://t.me/qanexus_bot?start=buy_stars_${productId}`);
+                        } else {
+                            // Fallback: create hidden link and click
+                            const link = document.createElement('a');
+                            link.href = `https://t.me/qanexus_bot?start=buy_stars_${productId}`;
+                            link.target = '_blank';
+                            document.body.appendChild(link);
+                            link.click();
+                            setTimeout(() => document.body.removeChild(link), 100);
+                        }
                     }
                 });
             } catch(err) {
