Fix typo in success message

--- a/web_app.html
+++ b/web_app.html
@@ -2522,7 +2522,7 @@
                             successParam: 'purchase_success'
                         }, (status) => {
                             if(status === 'paid') {
-                                tg.showAlert('✨ Покупка успешна! Ко insetы добавлены.');
+                                tg.showAlert('✨ Покупка успешна! Коины добавлены.');
                                 loadData(); // Reload to show updated balance
                             } else {
                                 tg.showAlert('ℹ️ Оплата отменена');
